--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Seniru Samaranayake
-#logo:
+logo: images/logo.jpg/logo.jpg
 #description:
-#show_downloads: true
+show_downloads: false
 theme: jekyll-theme-minimal
