--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Seniru Samaranayake
-logo: images/logo.jpg/logo.jpg
+logo: images/logo.jpg
 #description:
 show_downloads: false
 theme: jekyll-theme-minimal
