--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Seniru Samaranayake
-logo: images
+logo: images/Picsart_25-02-20_21-59-04-037.png
 #description:
 show_downloads: false
 theme: jekyll-theme-minimal
